# pfk-games

./: README.md  pyproject.toml
src/pelican/: ball.py  main.py
src/pfk_games/bounce/: ball.py  bounce.py  main.py  message.py  paddle.py  score.py
src/pfk_games/stickman/: coords.py  hitbox.py  level.py  main.py  message.py  sprite.py  stickman.py
src/pfk_games/stickman/images/: __init__.py  background1.xcf  background2.xcf  door.xcf  figures.xcf
src/pfk_games/stickman/sprite/: __init__.py  door.py  platform.py  stickman.py
