[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfk-games"
description = "Games from Programming for Kids"
version = "0.0.1"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "hatch",
]
test = [
    "pytest",
]

[project.scripts]
bounce = "pfk_games.bounce.main:main"
stickman = "pfk_games.stickman.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pfk_games"]
